--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,7 +1,14 @@
 version: '3.4'
 
 services:
-  catalogDb:
+  catalogdb:
     image: postgres
+
+  catalog.api:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: Services/Catalog/Catalog.Api/Dockerfile
+
 volumes:
   postgres_catalog:
