configuração ordering no docker

--- a/src/Services/Ordering/Ordering.Api/Ordering.Api.csproj
+++ b/src/Services/Ordering/Ordering.Api/Ordering.Api.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>c95d4544-1ae6-411d-acdc-b824acf0cd6e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
