--- a/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
+++ b/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>87098354-1fb8-40da-9c68-81086bdccb8a</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
